--- a/layouts/conferences/list.html
+++ b/layouts/conferences/list.html
@@ -2,7 +2,7 @@
 {{- partial "openSource.html" . -}}
 <section>
     <div class="tab-content">
-        <div class="content">
+        <div class="content common-layout">
             <ul>
                 {{ $viewDetail := .Params.viewDetail }}
                 {{ range .Params.list }}
