--- a/assets/scss/open-source.scss
+++ b/assets/scss/open-source.scss
@@ -1,24 +1,14 @@
+@import 'variables';
 .open-source-header {
+  padding-top: 129px;
+  padding-bottom: 40px;
   text-align: center;
-  height: 300px;
   color: #ffffff;
-
-  & > img {
-    width: 100%;
-    height: 100%;
-    object-fit:cover;
+  background-image: url("/images/common/resource-bg.jpg");
+  @media only screen and (max-width: $mobile-max-width) {
+    padding-top: 100px;
   }
-
-  & > div {
-    position: absolute;
-    top: 129px;
-    left: 0;
-    right: 0;
-    text-align: center;
-  }
-
   h1 {
-    height: 40px;
     text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
     font-size: 40px;
     font-weight: bold;
@@ -28,7 +18,6 @@
   }
 
   p {
-    height: 24px;
     margin-top: 12px;
     margin-bottom: 16px;
     text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
@@ -69,8 +58,7 @@
 }
 
 .open-source-tab {
-  width: 1160px;
-  margin: 40px auto 0;
+  margin-top: 40px;
   text-align: center;
   li {
     position: relative;
@@ -80,9 +68,15 @@
     font-weight: 600;
     color: #36435c;
     cursor: pointer;
+    @media only screen and (max-width: $mobile-max-width) {
+      font-size: 14px;
+    }
   }
   li + li {
     margin-left: 40px;
+    @media only screen and (max-width: $mobile-max-width) {
+      margin-left: 24px;
+    }
   }
   a {
     color: rgb(48, 62, 90);
@@ -103,6 +97,10 @@
       height: 0;
       border: 1em solid transparent;
       border-bottom-color: #fff;
+
+      @media only screen and (max-width: $mobile-max-width) {
+        display: none;
+      }
     }
   }
 
