--- a/assets/scss/videos.scss
+++ b/assets/scss/videos.scss
@@ -5,9 +5,12 @@
   padding-top: 60px;
   padding-bottom: 100px;
 
+  @media only screen and (max-width: $mobile-max-width) {
+    padding-top: 20px;
+    padding-bottom: 40px;
+  }
+
   & > div {
-    width: 1160px;
-    margin: 0 auto;
 
     & > .video-tab-ul {
       padding: 30px 34px 22px;
@@ -49,6 +52,9 @@
     .video-ul {
       margin-top: 20px;
       font-size: 0;
+      @media only screen and (max-width: $mobile-max-width) {
+        text-align: center;
+      }
 
       & > li {
         position: relative;
@@ -61,6 +67,7 @@
         background-color: #eef4f8;
         background-image: url('/images/videos/video-bg.svg');
         overflow: hidden;
+        text-align: left;
         cursor: pointer;
 
         & > img {
@@ -126,10 +133,21 @@
             }
           }
         }
+
+        @media only screen and (max-width: $mobile-max-width) {
+          width: 330px;
+          height: 190px;
+          display: block;
+          margin: 30px auto;
+        }
       }
 
       li:nth-child(3n) {
         margin-right: 0;
+
+        @media only screen and (max-width: $mobile-max-width) {
+          margin: 30px auto;
+        }
       }
     }
 
@@ -168,11 +186,11 @@
   height: 420px;
   padding: 0;
   border-radius: 0;
+  font-size: 0;
 
   video {
     width: 100%;
     height: 100%;
-    min-height: 420px;
     background-color: #171c34;
     outline: none;
   }
@@ -180,5 +198,16 @@
   a {
     top: -40px;
     right: 0;
+  }
+
+  @media only screen and (max-width: $mobile-max-width) {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    
+    iframe {
+      width: 100%;
+      height: 300px;
+    }
   }
 }
