--- a/layouts/contribution/list.html
+++ b/layouts/contribution/list.html
@@ -1,14 +1,13 @@
 {{ define "main" }}
 
-<section class="section-1">
-    {{ with .Params.section1 }}
-    <img class="top-cover-img" src="{{ .topImage | absURL }}" alt="">
-    <div class="title-div">
+{{ with .Params.section1 }}
+<section class="section-1 bg-cover" style='background-image: url("{{ .topImage }}");'>
+    <div class="title-div common-layout">
         <h1 class="title-center-h1">{{ .title }}</h1>
         <p class="common-p">{{ .content }}</p>
     </div>
-    {{ end }}
 </section>
+{{ end }}
 
 <section class="section-2">
     {{ with .Params.section2 }}
@@ -72,24 +71,26 @@
     {{ end }}
 </section>
 
-<section class='section-3'>
+<section class='section-3 common-layout'>
     {{ with .Params.section3.interestGroup }}
     <h2 class="title-black-h2">{{ .title }}</h2>
     <p class="title-p">{{ .content }}</p>
-    <ul class='interest-ul common-layout' data-index='0' data-length='{{ len .children }}'>
-        {{ range $index, $element := .children }}
-        {{ $active := "" }}
-        {{ $icon := $element.icon }}
-        {{ if eq $index 0 }}
-        {{ $active = "active" }}
-        {{ $icon = $element.iconActive }}
-        {{ end }}
-        <li class="{{ $active }}" data-info='{{ . | jsonify }}' data-index='{{ $index }}'>
-            <img src="{{ $icon | absURL }}" alt="">
-            <p>{{ $element.name }}</p>
-        </li>
-        {{ end }}
-    </ul>
+    <div class="scroll">
+        <ul class='interest-ul common-layout' data-index='0' data-length='{{ len .children }}'>
+            {{ range $index, $element := .children }}
+            {{ $active := "" }}
+            {{ $icon := $element.icon }}
+            {{ if eq $index 0 }}
+            {{ $active = "active" }}
+            {{ $icon = $element.iconActive }}
+            {{ end }}
+            <li class="{{ $active }}" data-info='{{ . | jsonify }}' data-index='{{ $index }}'>
+                <img src="{{ $icon | absURL }}" alt="">
+                <p>{{ $element.name }}</p>
+            </li>
+            {{ end }}
+        </ul>
+    </div>
     <div class='bottom-div'>
         {{ with $first := index .children 0}}
         <div>
