--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -41,6 +41,8 @@
                     <a class='slack-a' href="{{ .Site.Params.slackLink }}" target="_blank"></a>
                     <a class='twitter-a' href="{{ .Site.Params.twitterLink }}" target="_blank"></a>
                     <a class='github-a' href="{{ .Site.Params.githubLink }}" target="_blank"></a>
+                    <a class='medium-a' href="{{ .Site.Params.mediumLink }}" target="_blank"></a>
+                    <a class='linkedin-a' href="{{ .Site.Params.linkedinLink }}" target="_blank"></a>
                 </div>
                 <p class='p1'>{{ i18n "introduction2" }}</p>
             </div>
